--- a/package.json
+++ b/package.json
@@ -23,11 +23,10 @@
     "package": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "dependencies": {},
   "devDependencies": {
-    "esbuild": "^0.19.0",
-    "terser": "^5.26.0",
-    "uglifycss": "^0.0.29"
+    "@scure/bip32": "^2.0.1",
+    "bip39": "^3.1.0",
+    "esbuild": "^0.19.0"
   },
   "engines": {
     "node": ">=18.0.0"
