--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "package": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "dependencies": {
+    "pp-api": "git+https://github.com/people-post/pp-api.git"
+  },
   "devDependencies": {
     "@scure/bip32": "^2.0.1",
     "bip39": "^3.1.0",
-    "esbuild": "^0.19.0"
+    "esbuild": "^0.19.12"
   },
   "engines": {
     "node": ">=18.0.0"
