--- a/package.json
+++ b/package.json
@@ -21,15 +21,20 @@
     "build": "node build.js",
     "clean": "rm -rf obj",
     "package": "npm run build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "type-check": "tsc --noEmit",
+    "type-check:watch": "tsc --noEmit --watch"
   },
   "dependencies": {
     "pp-api": "git+https://github.com/people-post/pp-api.git"
   },
   "devDependencies": {
     "@scure/bip32": "^2.0.1",
+    "@types/node": "^20.10.0",
+    "bip32-ed25519": "^0.0.5",
     "bip39": "^3.1.0",
-    "esbuild": "^0.19.12"
+    "esbuild": "^0.19.12",
+    "typescript": "^5.3.3"
   },
   "engines": {
     "node": ">=18.0.0"
