--- a/package.json
+++ b/package.json
@@ -29,12 +29,15 @@
     "pp-api": "git+https://github.com/people-post/pp-api.git"
   },
   "devDependencies": {
+    "@noble/ed25519": "^1.7.3",
     "@scure/bip32": "^2.0.1",
     "@types/node": "^20.10.0",
     "bip32-ed25519": "^0.0.5",
     "bip39": "^3.1.0",
+    "cbor-x": "^2.0.0",
     "esbuild": "^0.19.12",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "webrtc-adapter": "^9.0.0"
   },
   "engines": {
     "node": ">=18.0.0"
