--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@scure/bip32": "^2.0.1",
     "bip32-ed25519": "^0.0.5",
     "bip39": "^3.1.0",
+    "buffer": "^6.0.3",
     "pp-api": "git+https://github.com/people-post/pp-api.git"
   },
   "devDependencies": {
