--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "scripts": {
     "build": "node build.js",
+    "build:2": "node build2.js",
+    "build:3": "node build3.js",
     "clean": "rm -rf obj",
     "package": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
