--- a/package.json
+++ b/package.json
@@ -36,9 +36,12 @@
     "pp-api": "git+https://github.com/people-post/pp-api.git"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^20.10.0",
     "cbor-x": "^1.6.0",
     "esbuild": "^0.19.12",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.0.0",
     "typescript": "^5.3.3",
     "webrtc-adapter": "^9.0.0"
   },
